# ambient-music-synthesis

./: readme.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
src/: compose.py  musical_params.py  synth.py
tests/: test_synthesis.py
