[metadata]
name = ambientmusicsynthesis
description = Library to generate emotion conditioned ambient music
author = Vedant Kalbag
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    ambientmusicsynthesis
install_requires =
    gensound==0.5.3
    librosa==0.9.2
    numpy==1.22.4
    pandas==1.4.4
    pedalboard==0.5.10
    PyAudio==0.2.12
    pytz==2022.2.1
    scikit-learn==1.1.2
    scipy==1.9.1
    simpleaudio==1.0.4
    SoundFile==0.10.3.post1
    tqdm==4.64.1
    whitenoise==6.2.0

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
ambientmusicsynthesis = py.typed

[flake8]
max-line-length = 160